# tracklift

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: test-app-on-pr.yml
tests/unit/: conftest.py  tracklist.py
tests/unit/exporters/: test_spotify.py
tests/unit/importers/: test_bbc.py  test_nts.py
tests/unit/trackers/: test_trackers.py
tracklift/: env.py  main.py
tracklift/exporters/: exporter.py  exporters.py  spotify.py
tracklift/importers/: __init__.py  bbc.py  importer.py  nts.py
tracklift/interfaces/: cli.py
tracklift/models/: channel.py  song.py  tracklist.py
tracklift/trackers/: cli_tracker.py  simple_tracker.py  tracker.py
